modal auto remove and Questionnaire

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -48,8 +48,7 @@
                             <div class="six wide field">
                                 <div class="ui input">
                                     <div class="ui calendar" id="calendar">
-                                        <div class="ui input left icon">
-                                            <i class="time icon"></i>
+                                        <div class="ui input">
                                             <input type="calendar" readonly="" placeholder="วัน/เดือน/ปี" id="calendar_data" name="calendar_data" [attr.required]="true"
                                                 autocomplete="off">
                                         </div>
