--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -51,7 +51,7 @@
           <table id="dataTable"  class="ui small celled table" style="width: 100%;">
             <thead>
               <tr>
-                <th style="text-align: center !important">#</th>
+                <!-- <th style="text-align: center !important">#</th> -->
                 <th style="text-align: center !important">ที่</th>
                 <th style="text-align: center !important" class="four wide field ">ชื่อกระดาษทำการ</th>
                 <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
@@ -63,16 +63,16 @@
             </thead>
           </table>
 
-        <div class="inline fields"></div>
+        <!-- <div class="inline fields"></div>
         <div class="inline fields ">
           <div class="sixteen wide field ">
             <div class="eight wide field "></div>
-            <button class="ui mini red button" >
+            <button class="ui mini primary button" >
               <i class="trash alternate icon"></i>
               ลบ
             </button>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -180,7 +180,7 @@
               Export
             </button>
             <button class="ui mini button " (click)="clearDataForm1()">
-
+              <i class="arrow left icon"></i>
               กลับ
             </button>
 
@@ -279,7 +279,7 @@
                 Export
               </button>
               <button class="ui mini button " (click)="clearDataForm2() ">
-  
+                <i class="arrow left icon"></i>
                 กลับ
               </button>
   
