--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -101,8 +101,8 @@
                     <i class="upload icon"></i>
                     อัพโหลด
                   </button>
-                  <button class="ui mini button" type="reset">
-                    <i class="trash outline icon"></i>
+                  <button class="ui mini primary button" type="reset">
+                    <i class="trash alternate icon"></i>
                     ลบไฟล์
                   </button>
                 </div>
