int02-m2[Mocked] and int02m2[Backend]

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -30,11 +30,11 @@
                   <i class="search icon"></i>
                   ค้นหา
                 </button>
-                <button type="submit" (click)="typeOfSubmit = 'S'" class="ui mini primary button">
+                <button type="submit" (click)="typeOfSubmit = 'S'" class="ui mini green button">
                   <i class="add icon"></i>
                   สร้าง
                 </button>
-                <button type="reset" class="ui mini primary button">
+                <button type="reset" class="ui mini red button">
                   <i class="delete icon"></i>
                   ล้างข้อมูล
                 </button>
