--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -6,17 +6,20 @@
                     <h4>แบบสอบทานระบบการควบคุมภายใน</h4>
                 </div>
                 <div class="ui centered segment grid">
-                    <form class="ui twelve wide form column" (submit)="search($event)">
+                    <form class="ui twelve wide form column" (submit)="search($event)" ngNativeValidate>
                         <div class="inline fields">
                             <div class="two wide field">
                                 <label>สรรพสามิตภาค</label>
                             </div>
                             <div class="six wide field">
                                 <div class="ui input">
-                                    <select class="ui selection dropdown ai">
+                                    <select class="ui selection dropdown ai" name="quarter">
                                         <option value="">เลือกภาค</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
+                                        <option value="1">ภาคที่ 5</option>
+                                        <option value="2">ภาคที่ 6</option>
+                                        <option value="3">ภาคที่ 7</option>
+                                        <option value="4">ภาคที่ 8</option>
+                                        <option value="5">ภาคที่ 9</option>
                                     </select>
                                 </div>
                             </div>
@@ -25,7 +28,7 @@
                             </div>
                             <div class="six wide field">
                                 <div class="ui input">
-                                    <input type="text" placeholder="ผู้สอบทาน">
+                                    <input type="text" name="checker" placeholder="ผู้สอบทาน">
                                 </div>
                             </div>
                         </div>
@@ -35,10 +38,13 @@
                             </div>
                             <div class="six wide field">
                                 <div class="ui input">
-                                    <select class="ui selection dropdown ai">
+                                    <select class="ui selection dropdown ai" name="locate">
                                         <option value="">เลือกพื้นที่</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
+                                        <option value="1">พื้นที่เชียงใหม่</option>
+                                        <option value="2">พื้นที่กรุงเทพฯและปริมณฑล</option>
+                                        <option value="3">พื้นที่ชัยนาท</option>
+                                        <option value="4">พื้นที่ขอนแก่น</option>
+                                        <option value="5">พื้นที่สงขลา</option>
                                     </select>
                                 </div>
                             </div>
@@ -67,7 +73,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column" *ngIf="questionnaire.length > 0">
+        <form class="column" *ngIf="questionnaire.length > 0" (submit)="save($event)" ngNativeValidate>
             <div class="ui styled fluid accordion" id="acc">
                 <div *ngFor="let qtn of questionnaire; let i = index">
                     <div class="{{ i==0 ? 'active' : ''}} title">
@@ -88,17 +94,23 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let detail of qtn.detail; let i = index" class="{{ detail.headerId ? 'head' : '' }}">
+                                <tr *ngFor="let detail of qtn.detail; let j = index" class="{{ detail.headerId ? 'head' : '' }}">
                                     <td *ngIf="detail.headerId" class="text-center">{{detail.order}}</td>
                                     <td *ngIf="detail.headerId" colspan="3">{{detail.content}}</td>
 
                                     <td *ngIf="detail.detailId" class="text-right">{{detail.order}}</td>
                                     <td *ngIf="detail.detailId">{{detail.content}}</td>
                                     <td *ngIf="detail.detailId" class="text-center">
-                                        <input type="checkbox">
+                                        <div class="ui checkbox">
+                                            <input type="radio" name="chk{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="yes" id="chk{{i+1}}{{j+1}}" required>
+                                            <label></label>
+                                        </div>
                                     </td>
                                     <td *ngIf="detail.detailId" class="text-center">
-                                        <input type="checkbox">
+                                        <div class="ui checkbox">
+                                            <input type="radio" name="chk{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="no" id="chk{{i+1}}{{j+1}}" required>
+                                            <label></label>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
@@ -116,9 +128,9 @@
             </div>
             <div class="ui grid">
                 <div class="save-btn center aligned column">
-                    <button class="ui mini primary button">บันทึก</button>
+                    <button class="ui mini primary button" type="submit">บันทึก</button>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
